--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "mock": "vite --mode mock"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
@@ -20,11 +21,13 @@
     "@types/node": "^24.10.9",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "mockjs": "^1.1.0",
     "sass": "^1.97.3",
     "typescript": "~5.9.3",
     "unplugin-auto-import": "^21.0.0",
     "unplugin-vue-components": "^31.0.0",
     "vite": "^7.2.4",
+    "vite-plugin-mock": "^3.0.2",
     "vue-tsc": "^3.1.4"
   }
 }
