--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "element-plus": "^2.13.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
-    "vue-router": "^5.0.0"
+    "vue-router": "^5.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.9",
