--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.13.4",
+    "docx": "^9.5.1",
+    "echarts": "^6.0.0",
     "element-plus": "^2.13.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "html-docx-js-typescript": "^0.1.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^5.0.0",
