--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "mockjs": "^1.1.0",
+    "rollup-plugin-visualizer": "^6.0.5",
     "sass": "^1.97.3",
     "typescript": "~5.9.3",
     "unplugin-auto-import": "^21.0.0",
